# elore

./: .gitignore  BEST_PRACTICES.md  CLAUDE.md  Cargo.toml  elore.toml.example  package.json
.agent/skills/navi/: COMMANDS.md  SKILL.md
.agent/workflows/: elore-workflow.md
.everlore/: .gitignore
cards/characters/: _template.md
cards/factions/: _template.md
cards/locations/: _template.md
cards/phases/: _template.md
cards/secrets/: _template.md
crates/elore-cli/: Cargo.toml
crates/elore-cli/src/: main.rs
crates/elore-cli/src/cmd/: add.rs  build.rs  content.rs  diff.rs  drama.rs  generate.rs  history.rs  ingest.rs  init.rs  lint.rs  mod.rs  pack.rs  phase.rs  plan.rs  publish.rs  read_query.rs  snapshot.rs  status.rs  suggest.rs  sync.rs  validate.rs  whatif.rs
crates/elore-server/: Cargo.toml
crates/elore-server/src/: config.rs  graph.rs  main.rs  server.rs
crates/evaluator/: Cargo.toml
crates/evaluator/src/: annotation.rs  audit.rs  error.rs  lib.rs  score.rs
crates/executor/: Cargo.toml
crates/executor/src/: error.rs  extract.rs  lib.rs  writer.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: error.rs  lib.rs
crates/ledger/src/effect/: beat.rs  diff.rs  history.rs  mod.rs  op.rs
crates/ledger/src/input/: card.rs  card_writer.rs  entity.rs  goal.rs  mod.rs  secret.rs
crates/ledger/src/memory/: edge.rs  embed.rs  fact.rs  hypergraph.rs  mod.rs  perceive.rs  recall.rs
crates/ledger/src/memory/harness/: builder.rs  chunker.rs  cluster.rs  evaluator.rs  extractor.rs  loader.rs  mod.rs
crates/ledger/src/state/: constraint.rs  content.rs  content_constraint.rs  fact.rs  graph.rs  mod.rs  phase.rs  phase_manager.rs  program.rs  reasoning.rs  rule.rs  snapshot.rs
crates/ledger/tests/: hongmenyan_reasoning.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: drama.rs  error.rs  intent.rs  lib.rs  prompt.rs  protocol.rs  validate.rs
docs/: design-v3.md  design.md  insight.md
examples/: best_practices_novel.md
examples/neon_shadows/: build_neon_shadows.py
examples/neon_shadows/.everlore/: history.jsonl  state.json
examples/neon_shadows/.everlore/beats/: ch1_rainy_night_001.json  ch1_rainy_night_002.json
examples/neon_shadows/.everlore/entities/: lexi.json  nexus_corp.json  ryker.json  secrets.yaml  sector_4.json  the_spire.json
examples/neon_shadows/.everlore/phases/: ch1_rainy_night.yaml
examples/neon_shadows/drafts/: 《neon_shadows》-v1.md
packs/hongmenyan/: pack.yaml
packs/hongmenyan/cards/characters/: fan_kuai.md  fan_zeng.md  liu_bang.md  xiang_bo.md  xiang_yu.md  xiang_zhuang.md  zhang_liang.md
packs/hongmenyan/cards/content/: root.md
packs/hongmenyan/cards/content/fan_kuai_enters/: root.md
packs/hongmenyan/cards/content/prologue/: root.md
packs/hongmenyan/cards/content/the_arrival/: root.md
packs/hongmenyan/cards/content/the_escape/: root.md
packs/hongmenyan/cards/content/the_feast/: root.md
packs/hongmenyan/cards/content/the_feast/jade_signal/: root.md
packs/hongmenyan/cards/content/the_feast/sword_dance/: root.md
packs/hongmenyan/cards/factions/: chu_army.md  han_army.md
packs/hongmenyan/cards/locations/: bashang.md  hongmen.md
packs/hongmenyan/cards/phases/the_feast/: 001.md
packs/hongmenyan/cards/secrets/: fan_zeng_plot.md  sword_dance.md  xiang_bo_leak.md
web/: app.js  index.html  style.css
