[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
ledger = { path = "crates/ledger" }
resolver = { path = "crates/resolver" }
executor = { path = "crates/executor" }
evaluator = { path = "crates/evaluator" }

# Datalog reasoning
nemo = { git = "https://github.com/knowsys/nemo.git", tag = "v0.10.0" }
nemo-physical = { git = "https://github.com/knowsys/nemo.git", tag = "v0.10.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["rt", "macros"] }
async-trait = "0.1"

# Utilities
indexmap = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
colored = "3"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
open = "5"

