[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ledger = { workspace = true }
resolver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
