[package]
name = "ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo = { workspace = true }
nemo-physical = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
