[package]
name = "ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo = { workspace = true }
nemo-physical = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# Embedding (candle — pure Rust, CPU inference, no C deps)
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }

fastembed = { workspace = true, optional = true }

[features]
default = []
embed = ["fastembed"]

[dev-dependencies]
tempfile = "3"
