[package]
name = "resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
